fix(*): fix cannot get type list
